--- a/package.json
+++ b/package.json
@@ -1,16 +1,16 @@
 {
-    "name": "express-typescript-starter",
+    "name": "mila",
     "version": "0.1.0",
     "description": "A starting point for Node.js express apps with TypeScript",
     "repository": {
         "type": "git",
         "url": "https://github.com/Microsoft/TypeScript-Node-Starter"
     },
-    "author": "Bowden Kelly",
+    "author": "Neta Li Lahat",
     "license": "MIT",
     "scripts": {
         "start": "npm run serve",
-        "build": "npm run build-sass && npm run build-ts && npm run lint && npm run copy-static-assets",
+        "build": "npm run build-ts && npm run lint && npm run copy-static-assets",
         "serve": "node dist/server.js",
         "watch-node": "nodemon dist/server.js",
         "watch": "concurrently -k -p \"[{name}]\" -n \"Sass,TypeScript,Node\" -c \"yellow.bold,cyan.bold,green.bold\" \"npm run watch-sass\" \"npm run watch-ts\" \"npm run watch-node\"",
@@ -18,8 +18,6 @@
         "watch-test": "npm run test -- --watchAll",
         "build-ts": "tsc",
         "watch-ts": "tsc -w",
-        "build-sass": "node-sass src/public/css/main.scss dist/public/css/main.css",
-        "watch-sass": "node-sass -w src/public/css/main.scss dist/public/css/main.css",
         "lint": "tsc --noEmit && eslint \"**/*.{js,ts}\" --quiet --fix",
         "copy-static-assets": "ts-node copyStaticAssets.ts",
         "debug": "npm run build && npm run watch-debug",
@@ -27,6 +25,8 @@
         "watch-debug": "concurrently -k -p \"[{name}]\" -n \"Sass,TypeScript,Node\" -c \"yellow.bold,cyan.bold,green.bold\" \"npm run watch-sass\" \"npm run watch-ts\" \"npm run serve-debug\""
     },
     "dependencies": {
+        "@google/maps": "^1.0.2",
+        "@types/google__maps": "^0.5.8",
         "async": "^3.1.0",
         "bcrypt-nodejs": "^0.0.3",
         "bluebird": "^3.5.5",
@@ -73,7 +73,6 @@
         "@types/lusca": "^1.6.1",
         "@types/mongoose": "^5.5.18",
         "@types/node": "^12.7.8",
-        "@types/node-sass": "^4.11.0",
         "@types/nodemailer": "^6.2.1",
         "@types/passport": "^1.0.1",
         "@types/passport-facebook": "^2.1.9",
@@ -90,7 +89,6 @@
         "concurrently": "^4.1.2",
         "eslint": "^6.4.0",
         "jest": "^24.9.0",
-        "node-sass": "^4.12.0",
         "nodemon": "^1.19.2",
         "shelljs": "^0.8.3",
         "supertest": "^4.0.2",
