--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -3,13 +3,23 @@
     // Hover to view descriptions of existing attributes.
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
-    "configurations": [        
-        {
+    "configurations": [
+        /*         {
             "type": "node",
             "request": "attach",
             "name": "Attach by Process ID",
             "processId": "${command:PickProcess}",
             "protocol": "inspector"
-        }
+        }, */
+        {
+            "type": "node",
+            "request": "attach",
+            "name": "Typescript Server",
+            "protocol": "inspector",
+            "port": 9229,
+            "restart": true,
+            "localRoot": "${workspaceFolder}",
+            "remoteRoot": "."
+        },
     ]
 }
