--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "scripts": {
         "start": "npm run serve",
         "build": "npm run build-ts && npm run lint && npm run copy-static-assets",
+        "dev": "ts-node-dev --inspect --respawn src/server.ts",
         "serve": "node dist/server.js",
         "watch-node": "nodemon dist/server.js",
         "watch": "concurrently -k -p \"[{name}]\" -n \"Sass,TypeScript,Node\" -c \"yellow.bold,cyan.bold,green.bold\" \"npm run watch-sass\" \"npm run watch-ts\" \"npm run watch-node\"",
@@ -42,6 +43,7 @@
         "fbgraph": "^1.4.4",
         "lodash": "^4.17.15",
         "lusca": "^1.6.1",
+        "mongoose": "^5.8.1",
         "nodemailer": "^6.3.0",
         "passport": "^0.4.0",
         "passport-facebook": "^3.0.0",
@@ -70,7 +72,6 @@
         "@types/jquery": "^3.3.31",
         "@types/lodash": "^4.14.141",
         "@types/lusca": "^1.6.1",
-        "@types/mongoose": "^5.5.18",
         "@types/node": "^12.7.8",
         "@types/nodemailer": "^6.2.1",
         "@types/passport": "^1.0.1",
@@ -93,6 +94,7 @@
         "supertest": "^4.0.2",
         "ts-jest": "^24.1.0",
         "ts-node": "^8.4.1",
+        "ts-node-dev": "^1.0.0-pre.44",
         "typescript": "^3.6.3"
     }
 }
