split point to days by distance

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,7 @@
         "esModuleInterop": true,
         "allowSyntheticDefaultImports": true,
         "target": "es6",
-        "noImplicitAny": true,
+        "noImplicitAny": false,
         "moduleResolution": "node",
         "sourceMap": true,
         "outDir": "dist",
@@ -14,9 +14,12 @@
                 "node_modules/*",
                 "src/types/*"
             ]
-        }
+        },
+        "noEmitOnError": true,
+        "removeComments": false,
     },
     "include": [
-        "src/**/*"
+        "src/**/*",
+        "node_modules",
     ]
 }
